2012-04-27  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus.el (debbugs-gnu): Don't override existing autoload definition.

2012-04-26  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el (plstore-called-interactively-p): New compat macro copied
	from message.el.
	(plstore-mode): Use it.

2012-04-26  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el: Revive the editing feature.
	(plstore-mode): New mode to edit plstore file.
	(plstore-mode-toggle-display, plstore-mode-original)
	(plstore-mode-decoded): New command.
	(plstore--encode, plstore--decode, plstore--write-contents-functions)
	(plstore--insert-buffer, plstore--make): New function.
	(plstore-open, plstore-save): Simplify by using them.

2012-04-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* pop3.el (pop3-wait-for-messages): Fix retrieved data size calculation.

2012-04-19  Juanma Barranquero  <lekktu@gmail.com>

	* tls.el (open-tls-stream): Remove unused binding.

2012-04-16  Glenn Morris  <rgm@gnu.org>

	* nndraft.el (nndraft-request-list): Fix declaration.

2012-04-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-buffer): Doc fix.

	* gnus-msg.el (gnus-inews-insert-gcc): Don't do the alist stuff when we
	don't have a current group.

	* gnus-sum.el (gnus-handle-ephemeral-exit): Avoid creating the group
	buffer if it doesn't exist.

	* gnus-group.el (gnus-group-read-ephemeral-group): If no quit-config is
	given, mark the group as ephemeral with the current window conf.

	* gnus-sum.el (gnus-set-global-variables): Don't assume that the group
	buffer exists, which it doesn't if we haven't started Gnus.
	(gnus-summary-exit): Allow quitting when we don't have a group buffer.

2012-04-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mml.el (mml-generate-mime): Allow specifying what the top-level part
	type is.

	* gnus-start.el (gnus-clean-old-newsrc): Remove totally bogus
	`unexists' entries.
	(gnus-clean-old-newsrc): Fix last checkin.
